fix bugs github page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,8 +35,7 @@
           </div>
         </div>
         <div
-          class="example__view"
-          [style.background-image]="'url(../assets/1.gif)'"
+          class="example__view example__view_1"
         ></div>
       </div>
     </div>
@@ -53,8 +52,7 @@
           </div>
         </div>
         <div
-          class="example__view"
-          [style.background-image]="'url(../assets/2.gif)'"
+          class="example__view example__view_2"
         ></div>
       </div>
     </div>
@@ -71,8 +69,7 @@
           </div>
         </div>
         <div
-          class="example__view"
-          [style.background-image]="'url(../assets/3.gif)'"
+          class="example__view example__view_3"
         ></div>
       </div>
     </div>
@@ -89,8 +86,7 @@
           </div>
         </div>
         <div
-          class="example__view"
-          [style.background-image]="'url(../assets/4.gif)'"
+          class="example__view example__view_4"
         ></div>
       </div>
     </div>
@@ -129,8 +125,7 @@
           </div>
         </div>
         <div
-          class="example__view"
-          [style.background-image]="'url(../assets/5.gif)'"
+          class="example__view example__view_5"
         ></div>
       </div>
     </div>
